# NitroRSS

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  fly.toml  manage.py  package.json  pyproject.toml  requirements.txt  tailwind.config.js
.github/workflows/: quality.yml  tests.yml
feeds/: admin.py  factories.py  models.py  rss.py  tasks.py  utils.py
feeds/management/commands/: find_feeds.py  get_feed_entries.py
feeds/migrations/: 0001_initial.py  0002_alter_feed_url.py  0003_feedconnection_and_more.py  0004_alter_feed_url_alter_feedconnection_url.py
mailer/: admin.py  backend.py  engine.py  forms.py  models.py  tasks.py  utils.py
mailer/management/commands/: send_mails.py
mailer/migrations/: 0001_initial.py  0002_messagelog_priority.py
mailer/templates/mailer/admin/: changelist.html  send_test_email.html
nitrorss/: celery.py  encoders.py  schedules.py  settings.py  urls.py  views.py  wsgi.py
nitrorss/base/: mixins.py
nitrorss/common/: _disposable_email_domains.py  tests.py  tokens.py  validators.py
nitrorss/management/commands/: create_schedules.py
nitrorss/static/css/: _base.css  base.css  index_form.css  login_form.css
nitrorss/templates/: base.html
nitrorss/templates/email/: base.html
nitrorss/templates/nitrorss/: index.html  privacy.html
nitrorss/templates/partials/: footer.html  header.html
nitrorss/templatetags/: nitro_tags.py
nitrorss/utils/: emails.py  env.py  strings.py
scripts/: find_feeds.py
subscriptions/: admin.py  apps.py  factories.py  forms.py  mixins.py  models.py  signals.py  tasks.py  tokens.py  urls.py  utils.py  views.py
subscriptions/migrations/: 0001_initial.py  0002_initial.py  0002_subscription_confirmed.py  0003_alter_subscription_is_active_and_more.py  0003_remove_subscription_is_deleted_and_more.py  0004_alter_subscription_target_email.py  0005_schedule_last_notification.py
subscriptions/templates/subscriptions/: add_subscription.html  confirm_delete.html  index.html  manage_subscription.html  subscriptions.html
subscriptions/templates/subscriptions/admin/: changelist.html
subscriptions/templates/subscriptions/email/: digest.html  digest.txt  verification.html  verification.txt
subscriptions/tests/: test_subscription_notifications.py
users/: admin.py  apps.py  backends.py  forms.py  models.py  signals.py  tokens.py  urls.py  utils.py  views.py
users/management/commands/: send_verification_email.py
users/migrations/: 0001_initial.py  0002_alter_user_name.py  0002_user_email_verified.py  0003_alter_user_email.py
users/templates/users/: account.html  login.html  register.html  reset_password.html  reset_password_confirm.html  reset_password_requested.html
users/templates/users/email/: verification.html  verification.txt
users/tests/: test_authentication.py
