[tool.poetry]
name = "NitroRSS"
version = "0.1.0"
description = "Real-time RSS and Atom feeds delivered to your email"
authors = ["Kamil Marut <kamil@kamilmarut.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^0.20.0"
Django = "^4.0.7"
dj-database-url = "^1.0.0"
django-redis = "^5.2.0"
django-debug-toolbar = "^3.6.0"
django-compressor = "^4.1"
django-celery-beat = "^2.3.0"
celery = "^5.2.7"
flower = "^1.2.0"
psycopg2 = "^2.9.3"
whitenoise = {extras = ["brotli"], version = "^6.2.0"}
gunicorn = {extras = ["gthread"], version = "^20.1.0"}
feedparser = "^6.0.10"
PyJWT = "^2.4.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
mypy = "^0.961"
flake8 = "^4.0.1"
flake8-annotations = "^2.9.0"
django-stubs = "^1.12.0"
types-requests = "^2.27.30"
ipython = "^8.4.0"

[tool.mypy]
ignore_missing_imports = true
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "nitrorss.settings"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
